# tinybit-python

./: .gitignore  .pre-commit-config.yaml  README.md  battery-test.py  fun_grid_designs.py  multiple-robots.py  pyproject.toml  setup.py  test.py
.github/workflows/: publish.yml
demo/: battery-test.py  fun_grid_designs.py  multiple-robots.py  test.py  test_keybindings.py  tk_play.py
wacrobot/: __init__.py  commands.py  devices.json  devices_name.json  robot.py
weallcode_robot/: __init__.py  commands.py  devices_name.json  robot.py  robot_ui.py  robotapp.py  utils.py
