[tool.poetry]
name = "robot-v2"
version = "0.1.0"
description = ""
authors = [
    "Blaine Rothrock <blaine.p.rothrock@gmail.com>",
    "Ali Karbassi <ali@weallcode.org>",
]
readme = "README.md"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
bleak = "^0.20.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.2.1"
isort = "^5.12.0"
ruff = "^0.0.260"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
