[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [project]
# name = "weallcode_robot"
# description = "We All Code Robot Client"
# readme = "README.md"
# requires-python = ">=3.7"
# license = "MIT"
# authors = [
#     { name="Ali Karbassi", email="ali@karbassi.com" },
#     { name="Blaine Rothrock", email="blaine.p.rothrock@gmail.com" },
# ]
# classifiers = [
#     "Development Status :: 4 - Beta",
#     "License :: OSI Approved :: MIT License",
#     "Programming Language :: Python",
#     "Programming Language :: Python :: 3 :: Only",
#     "Programming Language :: Python :: 3",
#     "Programming Language :: Python :: 3.4",
#     "Programming Language :: Python :: 3.5",
#     "Programming Language :: Python :: 3.6",
#     "Programming Language :: Python :: 3.7",
#     "Programming Language :: Python :: 3.8",
#     "Programming Language :: Python :: 3.9",
#     "Programming Language :: Python :: 3.10",
#     "Programming Language :: Python :: 3.11",
# ]
# dependencies = [
#     'bleak>=0.20.1,<0.21.0'
# ]
# dynamic = ["version"]

# [project.urls]
# Homepage = "https://github.com/WeAllCode/tinybit-python"
# Documentation = "https://github.com/WeAllCode/tinybit-python"

[tool.poetry]
name = "weallcode_robot"
version = "3.0.1"
description = ""
authors = [
    "Blaine Rothrock <blaine.p.rothrock@gmail.com>",
    "Ali Karbassi <ali@weallcode.org>",
]
readme = "README.md"
license = "MIT"
packages = [
    { include = "weallcode_robot" },
]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
bleak = "^0.20.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.2.1"
isort = "^5.12.0"
ruff = "^0.0.260"
