[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "weallcode_robot"
version = "3.1.1"
description = "Micro:bit TinyBit BLE Python Library"
license = "MIT"
authors = [
    "Blaine Rothrock <blaine.p.rothrock@gmail.com>",
    "Ali Karbassi <ali@weallcode.org>",
]
readme = "README.md"
homepage = "https://github.com/WeAllCode/tinybit-python"
repository = "https://github.com/WeAllCode/tinybit-python"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "weallcode_robot" },
]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
bleak = "^0.20.1"
textual = "^0.71.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.2.1"
isort = "^5.12.0"
ruff = "^0.0.260"
textual = "^0.52.1"
